added public folder for css

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>GolfCoursesApi</title>
 </head>
-<body style="text-align: center;">
+<body>
     <h1>This is a Golf Api!</h1>
     <h3>Here is some endpoints to choose from!</h3>
     <p>
