--- a/public/addGolfCourse.html
+++ b/public/addGolfCourse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Add Golf Course</title>
 </head>
-<body style="text-align: center;">
+<body>
     <h1>Add a new Golf course here!</h1>
 
     <form action="/addNewGolfCourse" method="post">
