added link to styles.css

--- a/public/addGolfCourse.html
+++ b/public/addGolfCourse.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Golf Course</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Add a new Golf course here!</h1>
