--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GolfCoursesApi</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>This is a Golf Api!</h1>
