--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>This is a Golf Api!</h1>
-    <h3>Here is some endpoints to choose from!</h3>
-    <p>
-        <ul>
-            <li>/courses</li>
-            <li>/course/:id</li>
-            <li>/addNewGolfCourse</li>
-            <li>/deletecourse/:id</li>
-        </ul>
-    </p>
-    
+    <div class="grad1">
+        <h1>This is a GolfCourse Api!</h1>
+        <h3>Here is some endpoints to choose from!</h3>
+        <p>
+            <ul>
+                <li>/courses</li>
+                <li>/course/:id</li>
+                <li>/addNewGolfCourse</li>
+                <li>/deletecourse/:id</li>
+            </ul>
+        </p>
+    </div>
 </body>
 </html>
